--- a/templates/datarobot-autoscale-template.yaml
+++ b/templates/datarobot-autoscale-template.yaml
@@ -1,21 +1,32 @@
+
 ###########################################################################
-#  Copyright 2020 DataRobot Inc. All Rights Reserved.                     #
+#  Copyright 2021 DataRobot Inc. All Rights Reserved.                     #
 #                                                                         #
 #  This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES       #
 #  OR CONDITIONS OF ANY KIND, express or implied.                         #
 ###########################################################################
-#
-# TODO: View CloudFormation Logs in the Console
-# https://aws.amazon.com/blogs/devops/view-cloudformation-logs-in-the-console/
-# https://s3.amazonaws.com/cloudformation-templates-us-east-1/CloudWatch_Logs.template
+
 
 AWSTemplateFormatVersion: "2010-09-09"
-Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-????) 
+Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-1xxxxxxxx) 
+Metadata:
+  QuickStartDocumentation:
+    EntrypointName: Build Autoscaling for Model Workers
+    Order: "5"
+  QSLint:
+    Exclusions: [ W9002, W9003, W9006 ]
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9101
+
 Parameters:
   IamArn:
     Type: String
+    Description: IAM Arn needed for autoscale launch profile
   EC2SecurityGroup:
     Type: 'AWS::EC2::SecurityGroup::Id'
+    Description: EC2 Security group ID for autoscale instances
   KeyPairName:
     Description: Name of an existing public/private key pair. If you do not have one in this AWS Region,
       please create it before continuing. 
@@ -32,6 +43,7 @@ Parameters:
     Type: 'AWS::EC2::Subnet::Id'
   MainStack:
     Type: String
+    Description: Name of main parent stack
 
 Resources:
 
