--- a/templates/datarobot-securitygroup-template.yaml
+++ b/templates/datarobot-securitygroup-template.yaml
@@ -1,19 +1,27 @@
 ###########################################################################
-#  Copyright 2020 DataRobot Inc. All Rights Reserved.                     #
+#  Copyright 2021 DataRobot Inc. All Rights Reserved.                     #
 #                                                                         #
 #  This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES       #
 #  OR CONDITIONS OF ANY KIND, express or implied.                         #
 ###########################################################################
-#
-# TODO: View CloudFormation Logs in the Console
-# https://aws.amazon.com/blogs/devops/view-cloudformation-logs-in-the-console/
-# https://s3.amazonaws.com/cloudformation-templates-us-east-1/CloudWatch_Logs.template
+
 
 AWSTemplateFormatVersion: "2010-09-09"
-Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-????) 
+Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-1xxxxxxxx)
+Metadata:
+  QuickStartDocumentation:
+    EntrypointName: Launch into an existing VPC
+    Order: "5"
+  QSLint:
+    Exclusions: [ W9002, W9003, W9006 ]
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9101 
 Parameters:
   MainStack:
     Type: String
+    Description: Name of main parent stack.
   VpcId:
     Type: 'AWS::EC2::VPC::Id'
     Description: Id of your existing Virtual Private Cloud (VPC)
@@ -25,13 +33,6 @@ Parameters:
     MaxLength: '18'
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x
-  ExternalIPAddress:
-    Description: The external IP address that can communicate with these EC2 instances
-    Type: String
-    MinLength: '9'
-    MaxLength: '18'
-    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
-    ConstraintDescription: must be a valid IP address cidr block
 
 Resources:
   InstanceSecurityGroup:
@@ -41,8 +42,6 @@ Resources:
       GroupDescription: !Sub ${AWS::StackName}-SecurityGroup
       VpcId: !Ref VpcId
       SecurityGroupIngress:
-
-### Debug settings, comment out or remove as required.
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
@@ -55,20 +54,6 @@ Resources:
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0          
-
-### Allow for access from "your IP"
-#        - IpProtocol: tcp
-#          FromPort: '22'
-#          ToPort: '22'
-#          CidrIp: !Ref ExternalIPAddress
-#        - IpProtocol: tcp
-#          FromPort: '80'
-#          ToPort: '80'
-#          CidrIp: !Ref ExternalIPAddress
-#        - IpProtocol: tcp 
-#          FromPort: '443'
-#          ToPort: '443'
-#          CidrIp: !Ref ExternalIPAddress
         
 ### Required DataRobot ports
         - Description: Application Web
